# gofactor

trident/: LICENSE  README.md  pyproject.toml  quick_start.tri
trident/benchmarks/: run_comparison.py
trident/docs/: getting-started.md
trident/examples/: attention.tri  hello_world.tri  ocr_invoice.tri  sentiment_analysis.tri
trident/examples/gallery/: contract_analysis.tri  invoice_processing.tri  medical_records.tri  receipt_scanning.tri
trident/examples/gallery/invoice/: trident.toml
trident/marketing/: demo_script.md  launch_post.md
trident/src/trident/: __init__.py
trident/src/trident/cli/: __init__.py  hub.py  main.py  repl.py
trident/src/trident/codegen/: __init__.py  ir.py  jax_emitter.py  optimizer.py
trident/src/trident/lexer/: __init__.py  lexer.py  tokens.py
trident/src/trident/librarian/: __init__.py  cli.py  installer.py  manifest.py  resolver.py
trident/src/trident/parser/: __init__.py  ast.py  parser.py
trident/src/trident/primitives/: __init__.py  nlp.py  tensor.py  vision.py
trident/src/trident/runtime/: __init__.py  device.py  executor.py
trident/src/trident/semantic/: __init__.py  analyzer.py  symbols.py  types.py
trident/tests/: conftest.py  test_codegen.py  test_lexer.py  test_parser.py  test_semantic.py
